top-line complete

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,63 @@
 
 </head>
 
-<body>
+<body class="ishome">
+
+
+
+<div id="page-container">
+	<!-- mobile menu -->
+	<nav id="mobile-mnu" data-logo="img/mmenu-logo.png">
+		<ul>
+			<li><a href="#0">Главная</a></li>
+			<li><a href="#0">Каталог</a></li>
+			<li><a href="#0">О компании</a></li>
+			<li><a href="#0">Вакансии</a></li>
+			<li><a href="#0">Документы</a></li>
+			<li><a href="#0">Контакты</a></li>
+		</ul>
+	</nav>
+	<!-- mobile menu -->
+
+	<!-- ======= HEADER ======= -->
+	<header class="main-head">
+		<div class="container">
+			<div class="top-line">
+				<a href="/" class="logo">
+					<img src="img/logo.png" alt="alt">
+					<span class="logo-title">
+					<span class="title">ООО УЖБЗ-2</span>
+					<span class="desc">К нам идут за качеством!</span>
+				</span>
+				</a>
+				<a href="#mobile-mnu" class="toggle-mnu d-inline-block d-xl-none"><span></span></a>
+				<div class="mnu-line">
+					<!-- main mnu -->
+					<nav class="main-mnu d-none d-xl-inline-block">
+						<ul>
+							<li><a href="#0">Главная</a></li>
+							<li><a href="#0">Каталог</a></li>
+							<li><a href="#0">О компании</a></li>
+							<li><a href="#0">Вакансии</a></li>
+							<li><a href="#0">Документы</a></li>
+							<li><a href="#0">Контакты</a></li>
+						</ul>
+					</nav>
+					<!-- /main mnu -->
+					<div class="head-phone d-none d-xl-block">
+						<a href="tel:73472422812">+7 (347) 242-28-12</a>
+					</div>
+				</div>
+				<div class="btn-wrap">
+					<a href="tel:73472422812" class="head-s-phone d-block d-xl-none">+7 (347) 242-28-12</a>
+					<a href="#0" class="btn btn-blue">Заказать звонок</a>
+				</div>
+			</div>
+		</div>
+	</header>
+	<!-- ======= END HEADER ======= -->
+</div>
+
 
 
 <!-- Custom HTML -->
