--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,12 @@
 
 	<!-- ======= HEADER ======= -->
 	<header class="main-head">
+		<div class="header-bg" style="background-image: url('img/header-bg.jpg');">
+			<video class="video" preload loop="loop" muted autoplay width="300" height="150">
+				<source src="img/testvideo.mp4" type="video/mp4">
+			</video>
+		</div>
+
 		<div class="container">
 			<div class="top-line">
 				<a href="/" class="logo">
@@ -76,6 +82,16 @@
 				<div class="btn-wrap">
 					<a href="tel:73472422812" class="head-s-phone d-block d-xl-none">+7 (347) 242-28-12</a>
 					<a href="#0" class="btn btn-blue">Заказать звонок</a>
+				</div>
+			</div><!-- /top-line -->
+
+			<div class="intro">
+				<div class="row">
+					<div class="col-lg-6 col-xl-5">
+						в год <br>
+						<span>93 000 м2</span><br>
+						товарного бетона
+					</div>
 				</div>
 			</div>
 		</div>
