--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
 			<li><a href="#0">Контакты</a></li>
 		</ul>
 	</nav>
-	<!-- mobile menu -->
+	<!-- /mobile menu -->
 
 	<!-- ======= HEADER ======= -->
 	<header class="main-head">
@@ -53,6 +53,37 @@
 		</div>
 
 		<div class="container">
+			<!-- fixed div -->
+			<div class="fix-div">
+				<!-- fix item -->
+				<a href="#0" class="fix-item">
+					<span class="fix-item-bg"></span>
+					<img src="img/fix-icon-1.png" alt="alt">
+					<span class="d-none d-md-block">Прайс</span>
+				</a>
+				<!-- /fix item -->
+
+				<!-- fix item -->
+				<a href="#0" class="fix-item">
+					<span class="fix-item-bg"></span>
+					<img src="img/fix-icon-2.png" alt="alt">
+					<span class="d-none d-md-block">Поиск</span>
+				</a>
+				<!-- /fix item -->
+
+				<!-- fix item -->
+				<a href="#0" class="fix-item">
+					<span class="fix-item-bg"></span>
+					<img src="img/fix-icon-3.png" alt="alt">
+					<span class="d-none d-md-block">Заказ</span>
+				</a>
+				<!-- /fix item -->
+			</div>
+			<!-- /fixed div -->
+
+
+
+			<!-- top-line -->
 			<div class="top-line">
 				<a href="/" class="logo">
 					<img src="img/logo.png" alt="alt">
@@ -101,7 +132,7 @@
 
 
 
-<!-- Custom HTML -->
+
 
 <script src="js/scripts.min.js"></script>
 
