section top-products complete

--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,6 @@
 </head>
 
 <body class="ishome">
-
-
-
 <div id="page-container">
 	<!-- mobile menu -->
 	<nav id="mobile-mnu" data-logo="img/mmenu-logo.png">
@@ -81,8 +78,6 @@
 			</div>
 			<!-- /fixed div -->
 
-
-
 			<!-- top-line -->
 			<div class="top-line">
 				<a href="/" class="logo">
@@ -128,12 +123,86 @@
 		</div>
 	</header>
 	<!-- ======= END HEADER ======= -->
-</div>
 
+	<!-- ======= SECTION TOP PRODUCTS ======= -->
+	<section class="s-top-products">
+		<div class="tizer">
+			<div class="container">
+				Закажи сейчас и храни бесплатно!
+			</div>
+		</div>
 
+		<div class="container">
+			<div class="section-head">Топ Продаж</div>
+			<div class="toppr-slider-wrap">
+				<div class="prod-slider owl-carousel">
+					<!-- slide start -->
+					<a href="#0" class="prod-slide">
+						<span class="prod-slide-img">
+							<img src="img/prod-img-1.png" alt="alt" class="img-responsive">
+						</span>
+						<span class="prod-slide-title">
+							Лестничные марши
+						</span>
+					</a>
+					<!-- slide end -->
 
+					<!-- slide start -->
+					<a href="#0" class="prod-slide">
+						<span class="prod-slide-img">
+							<img src="img/prod-img-2.png" alt="alt" class="img-responsive">
+						</span>
+						<span class="prod-slide-title">
+							Плиты перекрытия
+						</span>
+					</a>
+					<!-- slide end -->
 
+					<!-- slide start -->
+					<a href="#0" class="prod-slide">
+						<span class="prod-slide-img">
+							<img src="img/prod-img-3.png" alt="alt" class="img-responsive">
+						</span>
+						<span class="prod-slide-title">
+							Перемычки и дорожные плиты
+						</span>
+					</a>
+					<!-- slide end -->
 
+					<!-- slide start -->
+					<a href="#0" class="prod-slide">
+						<span class="prod-slide-img">
+							<img src="img/prod-img-4.png" alt="alt" class="img-responsive">
+						</span>
+						<span class="prod-slide-title">
+							Сваи
+						</span>
+					</a>
+					<!-- slide end -->
+
+					<!-- slide start -->
+					<div class="prod-slide">
+						5
+					</div>
+					<!-- slide end -->
+
+					<!-- slide start -->
+					<div class="prod-slide">
+						6
+					</div>
+					<!-- slide end -->
+				</div>
+				<a href="#0" class="btn btn-blue"><span class="d-none d-sm-inline-block">Перейти в</span> каталог</a>
+			</div>
+		</div>
+	</section>
+	<!-- ======= END SECTION TOP PRODUCTS ======= -->
+
+	<footer class="main-foot">
+
+</footer>
+
+</div><!--/page container -->
 <script src="js/scripts.min.js"></script>
 
 </body>
