section partners complete

--- a/app/index.html
+++ b/app/index.html
@@ -346,11 +346,38 @@
 					</div>
 				</div>
 			</div>
-
-
 		</div>
 	</section>
 	<!-- ======= END SECTION ABOUT ======= -->
+
+	<!-- ======= SECTION PARTNERS ======= -->
+	<section class="s-partners">
+		<div class="container">
+			<div class="section-head">
+				Партнеры
+			</div>
+			<div class="row partners-wrap">
+				<!-- partner item -->
+				<div class="col-md-6 col-lg-6">
+					<div class="partner-item">
+						<img src="img/partner-img-1.png" alt="alt" class="img-responsive">
+					</div>
+				</div>
+				<!-- /partner item -->
+
+				<div class="col-md-6 col-lg-6">
+					<!-- partner item -->
+					<div class="partner-item">
+						<img src="img/partner-img-2.png" alt="alt" class="img-responsive">
+					</div>
+					<!-- /partner item -->
+				</div>
+
+			</div>
+		</div>
+	</section>
+	<!-- ======= END SECTION PARTNERS ======= -->
+
 
 
 	<footer class="main-foot">
