section news complete

--- a/app/index.html
+++ b/app/index.html
@@ -358,14 +358,14 @@
 			</div>
 			<div class="row partners-wrap">
 				<!-- partner item -->
-				<div class="col-md-6 col-lg-6">
+				<div class="col-md-6 partner-item-wrap">
 					<div class="partner-item">
 						<img src="img/partner-img-1.png" alt="alt" class="img-responsive">
 					</div>
 				</div>
 				<!-- /partner item -->
 
-				<div class="col-md-6 col-lg-6">
+				<div class="col-md-6 partner-item-wrap">
 					<!-- partner item -->
 					<div class="partner-item">
 						<img src="img/partner-img-2.png" alt="alt" class="img-responsive">
@@ -377,6 +377,62 @@
 		</div>
 	</section>
 	<!-- ======= END SECTION PARTNERS ======= -->
+
+	<!-- ======= SECTION NEWS ======= -->
+	<section class="s-news bg-darkblue">
+		<div class="container">
+			<div class="section-head">
+				Новости
+			</div>
+			<div class="news-wrap">
+				<div class="row">
+					<!-- news item -->
+					<div class="col-md-4">
+						<a href="#0" class="news-item">
+							<span class="news-item-img" style="background-image: url('img/news-img.jpg');"></span>
+							<span class="news-item-title">Заголовок</span>
+							<span class="news-item-desc">
+								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
+								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
+							</span>
+							<span class="news-item-date">00.00.2019 г.</span>
+						</a>
+					</div>
+					<!-- /news item -->
+
+					<!-- news item -->
+					<div class="col-md-4">
+						<a href="#0" class="news-item">
+							<span class="news-item-img" style="background-image: url('img/news-img.jpg');"></span>
+							<span class="news-item-title">Заголовок раз два три большой</span>
+							<span class="news-item-desc">
+								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
+								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
+							</span>
+							<span class="news-item-date">00.00.2019 г.</span>
+						</a>
+					</div>
+					<!-- /news item -->
+
+					<!-- news item -->
+					<div class="col-md-4">
+						<a href="#0" class="news-item">
+							<span class="news-item-img" style="background-image: url('img/news-img.jpg');"></span>
+							<span class="news-item-title">Заголовок</span>
+							<span class="news-item-desc">
+								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
+								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
+							</span>
+							<span class="news-item-date">00.00.2019 г.</span>
+						</a>
+					</div>
+					<!-- /news item -->
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- ======= END SECTION NEWS ======= -->
+
 
 
 
