section map complete

--- a/app/index.html
+++ b/app/index.html
@@ -434,6 +434,57 @@
 	<!-- ======= END SECTION NEWS ======= -->
 
 
+	<!-- ======= SECTION MAP ======= -->
+	<section class="s-map bg-darkblue">
+		<div class="container">
+			<div id="map" data-att="54.806889" data-long="56.081515" data-zoom="16" data-marker="img/icons/map-marker.png"></div>
+
+			<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+
+			<script>
+				ymaps.ready(function(){
+					var mapId = $('#map'),
+							attitude = mapId.data("att"),
+							longtitude = mapId.data("long"),
+							zoom = mapId.data("zoom"),
+							marker = mapId.data("marker"),
+							map = new ymaps.Map("map", {
+								center: [attitude, longtitude],
+								controls: ['zoomControl'],
+								zoom: zoom
+							}),
+
+							myPlacemark = new ymaps.Placemark(map.getCenter(), {
+								hintContent: 'Собственный значок метки',
+								balloonContent: 'Это красивая метка'
+							}, {
+								// Опции.
+								// Необходимо указать данный тип макета.
+								iconLayout: 'default#image',
+								// Своё изображение иконки метки.
+								iconImageHref: marker,
+								// Размеры метки.
+								iconImageSize: [26.6, 42.4],
+								// Смещение левого верхнего угла иконки относительно
+								// её "ножки" (точки привязки).
+								iconImageOffset: [-16, -30]
+							});
+
+					map.geoObjects.add(myPlacemark);
+					map.behaviors.disable('scrollZoom');
+
+					if ($(window).width() <= 480) {
+						map.behaviors.disable('drag');
+					}
+				});
+			</script>
+
+		</div>
+	</section>
+	<!-- ======= END SECTION MAP ======= -->
+
+
+
 
 
 	<footer class="main-foot">
