--- a/app/index.html
+++ b/app/index.html
@@ -392,8 +392,7 @@
 							<span class="news-item-img" style="background-image: url('img/news-img.jpg');"></span>
 							<span class="news-item-title">Заголовок</span>
 							<span class="news-item-desc">
-								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
-								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
+								Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений... Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...
 							</span>
 							<span class="news-item-date">00.00.2019 г.</span>
 						</a>
@@ -406,8 +405,7 @@
 							<span class="news-item-img" style="background-image: url('img/news-img.jpg');"></span>
 							<span class="news-item-title">Заголовок раз два три большой</span>
 							<span class="news-item-desc">
-								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
-								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
+								Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений... Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...
 							</span>
 							<span class="news-item-date">00.00.2019 г.</span>
 						</a>
@@ -420,8 +418,7 @@
 							<span class="news-item-img" style="background-image: url('img/news-img.jpg');"></span>
 							<span class="news-item-title">Заголовок</span>
 							<span class="news-item-desc">
-								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
-								<p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...</p>
+								Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений... Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений...
 							</span>
 							<span class="news-item-date">00.00.2019 г.</span>
 						</a>
@@ -483,13 +480,27 @@
 	</section>
 	<!-- ======= END SECTION MAP ======= -->
 
+	<!-- ======= FOOTER ======= -->
+	<footer class="main-foot bg-darkblue">
+		<div class="container">
+			<div class="foot-wrap">
+				<div class="foot-text">
+					450027, г. Уфа, Индустриальное шоссе, 4.<br>Тел. отдела продаж: <a href="tel:73472422812">+7   (347) 242-28-12</a>
+				</div>
+				<div class="foot-soc">
+					<a href="#0" target="_blank">
+						<img src="img/icons/icon-vk.svg" alt="alt" class="svg">
+					</a>
 
+					<a href="#0" target="_blank">
+						<img src="img/icons/icon-insta.svg" alt="alt" class="svg">
+					</a>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- ======= END FOOTER ======= -->
 
-
-
-	<footer class="main-foot">
-
-</footer>
 
 </div><!--/page container -->
 <script src="js/scripts.min.js"></script>
