page-card.html complete

--- a/app/index.html
+++ b/app/index.html
@@ -151,7 +151,7 @@
 		<div class="container">
 			<div class="section-head">Топ Продаж</div>
 			<div class="toppr-slider-wrap">
-				<div class="prod-slider owl-carousel">
+				<div class="prod-slider owl-prod-slider owl-carousel">
 					<!-- slide start -->
 					<a href="#0" class="prod-slide">
 						<span class="prod-slide-img">
@@ -558,16 +558,7 @@
 			</div>
 		</section>
 	</div>
-
-	<script>
-
-	</script>
-
-
 	<!-- ======= END SECTION ABOUT ======= -->
-
-
-
 
 	<!-- ======= SECTION PARTNERS ======= -->
 	<section class="s-partners">
