--- a/app/page-card.html
+++ b/app/page-card.html
@@ -125,7 +125,7 @@
     </header>
     <!-- ======= END HEADER ======= -->
 
-    <!-- ======= SECTION ======= -->
+    <!-- ======= SECTION CATALOG======= -->
     <section class="s-catalog">
         <div class="container">
             <div class="section-head">
@@ -228,7 +228,195 @@
             </div>
         </div>
     </section>
-    <!-- ======= END SECTION ======= -->
+    <!-- ======= END SECTION CATALOG ======= -->
+    <!-- ======= SECTION PRODUCT CARD ======= -->
+    <section class="s-product-card">
+        <div class="container">
+            <div class="prod-card-head">
+                <div class="prod-img">
+                    <img src="img/prod-img/prod-lestnichnue_marshu.png" alt="alt" class="img-responsive">
+                </div>
+                <div class="prod-title">
+                    Лестничные марши
+                </div>
+            </div>
+            <div class="prod-wrap">
+                <table class="prod-table" data-tablesaw-mode="swipe">
+                    <thead>
+                    <tr>
+                        <th data-tablesaw-priority="persist">Вид продукции, Эскиз, Обозначение документации</th>
+                        <th>Марка</th>
+                        <th colspan="3" class="size">Размеры, мм</th>
+                        <th>Класс бетона по прочности на сжатие</th>
+                        <th>Объем бетона, м3</th>
+                        <th>Масса, т</th>
+                    </tr>
+
+                    <tr class="sub-th">
+                        <th></th>
+                        <th></th>
+                        <th>L</th>
+                        <th>B</th>
+                        <th>H</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+                    <!-- products-table item -->
+                    <tr class="prod-table-row">
+                        <td rowspan="3" class="prod-table-desc">
+                                <span class="prod-table-title">Лестничные марши
+                                    Серия 1.251.1-4 вып.1
+                                </span>
+                            Лестничные марши предназначены для устройства внутренних лестниц в помещениях с
+                            неагрессивной средой общественных зданий со стенами из кирпича или крупных блоков с высотой
+                            этажа 3,3, возводимых в обычных условиях строительства.
+                        </td>
+                        <td>2 ЛМФ 39.12.17-5</td>
+                        <td>3913</td>
+                        <td>1200</td>
+                        <td>295</td>
+                        <td>B 15</td>
+                        <td>0,517</td>
+                        <td>1,29</td>
+                    </tr>
+
+                    <tr>
+                        <td>2 ЛМФ 39.12.17-5</td>
+                        <td>3913</td>
+                        <td>1200</td>
+                        <td>295</td>
+                        <td>B 15</td>
+                        <td>0,517</td>
+                        <td>1,29</td>
+                    </tr>
+
+                    <tr class="last-mark">
+                        <td>2 ЛМФ 39.12.17-5</td>
+                        <td>3913</td>
+                        <td>1200</td>
+                        <td>295</td>
+                        <td>B 15</td>
+                        <td>0,517</td>
+                        <td>1,29</td>
+                    </tr>
+                    <!-- products-table item -->
+
+
+                    <!-- products-table item -->
+                    <tr class="prod-table-row">
+                        <td rowspan="3" class="prod-table-desc">
+                                <span class="prod-table-title">Лестничные марши
+                                    Серия 1.251.1-4 вып.1
+                                </span>
+                            Лестничные марши предназначены для устройства внутренних лестниц в помещениях с
+                            неагрессивной средой общественных зданий со стенами из кирпича или крупных блоков с высотой
+                            этажа 3,3, возводимых в обычных условиях строительства.
+                        </td>
+                        <td>2 ЛМФ 39.12.17-5</td>
+                        <td>3913</td>
+                        <td>1200</td>
+                        <td>295</td>
+                        <td>B 15</td>
+                        <td>0,517</td>
+                        <td>1,29</td>
+                    </tr>
+
+                    <tr>
+                        <td>2 ЛМФ 39.12.17-5</td>
+                        <td>3913</td>
+                        <td>1200</td>
+                        <td>295</td>
+                        <td>B 15</td>
+                        <td>0,517</td>
+                        <td>1,29</td>
+                    </tr>
+
+                    <tr class="last-mark">
+                        <td>2 ЛМФ 39.12.17-5</td>
+                        <td>3913</td>
+                        <td>1200</td>
+                        <td>295</td>
+                        <td>B 15</td>
+                        <td>0,517</td>
+                        <td>1,29</td>
+                    </tr>
+                    <!-- products-table item -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+    <!-- ======= END SECTION PRODUCT CARD ======= -->
+
+    <!-- ======= SECTION INTEREST ======= -->
+    <section class="s-interest">
+        <div class="container">
+            <div class="section-head">Возможно вас заинтересует</div>
+            <div class="interests-wrap">
+                <div class="row">
+                    <!-- interest-item -->
+                    <div class="col-sm-6 col-lg-3">
+                        <a href="#0" class="int-item">
+						<span class="int-item-img">
+							<img src="img/prod-img-1.png" alt="alt" class="img-responsive">
+						</span>
+                            <span class="int-item-title">
+							Лестничные марши
+						</span>
+                        </a>
+                    </div>
+
+                    <!-- /interest-item -->
+
+                    <!-- interest-item -->
+                    <div class="col-sm-6 col-lg-3">
+                        <a href="#0" class="int-item">
+						<span class="int-item-img">
+							<img src="img/prod-img-2.png" alt="alt" class="img-responsive">
+						</span>
+                            <span class="int-item-title">
+							Плиты перекрытия
+						</span>
+                        </a>
+                    </div>
+                    <!-- /interest-item -->
+
+                    <!-- interest-item -->
+                    <div class="col-sm-6 col-lg-3">
+                        <a href="#0" class="int-item">
+						<span class="int-item-img">
+							<img src="img/prod-img-3.png" alt="alt" class="img-responsive">
+						</span>
+                            <span class="int-item-title">
+							Перемычки и дорожные плиты
+						</span>
+                        </a>
+                    </div>
+                    <!-- /interest-item -->
+
+                    <!-- interest-item -->
+                    <div class="col-sm-6 col-lg-3">
+                        <a href="#0" class="int-item">
+						<span class="int-item-img">
+							<img src="img/prod-img-4.png" alt="alt" class="img-responsive">
+						</span>
+                            <span class="int-item-title">
+							Сваи
+						</span>
+                        </a>
+                    </div>
+                    <!-- /interest-item -->
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ======= END SECTION TOP INTEREST ======= -->
+
+
 
 
 
